Feature/map features correctly (#7)
* add tss and bugfix for older versions

* init

* corrections

* clean up

* clean up

* clean up

* bugfix greedy pairwise exon matching

* left anchor not necessary - covered by greedy

* small improvements

* add todo

* reimplement configuration and impact

* refactor exon mapping

* bug fix in comparators